--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-FFIJJ54D;Initial Catalog=RentX;Integrated Security=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True"
+    }
 }
