--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "JwtSettings": {
+        "Key": "this is my custom Secret key for authentication",
+        "Issuer": "youtCompanyIssuer.com"
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True"
     }
