--- a/Frontend/rentx/package.json
+++ b/Frontend/rentx/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-state-sync": "^3.1.4"
+    "redux-state-sync": "^3.1.4",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
     "@types/node": "^20",
