--- a/Frontend/rentx/package.json
+++ b/Frontend/rentx/package.json
@@ -9,21 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
+    "@microsoft/signalr": "^8.0.0",
     "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.4.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.357.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
