--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -10,7 +10,7 @@
         "Issuer": "youtCompanyIssuer.com"
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True;MultipleActiveResultSets=True;"
+  }
 }
