--- a/Backend/RentItNow.csproj
+++ b/Backend/RentItNow.csproj
@@ -9,9 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder2\**" />
     <Compile Remove="NewFolder\**" />
+    <Content Remove="NewFolder2\**" />
     <Content Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder2\**" />
     <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder2\**" />
     <None Remove="NewFolder\**" />
   </ItemGroup>
 
