--- a/Frontend/rentx/.env
+++ b/Frontend/rentx/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=https://localhost:44375/api
-NEXT_PUBLIC_AZURE_STORAGE_CONNECTION_STRING=https://rentximages.blob.core.windows.net/?sv=2022-11-02&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2025-04-16T01:42:15Z&st=2024-04-15T17:42:15Z&spr=https&sig=Dmus2vu01Jm%2Fhhs7tn%2FdfVE%2FqOHkrXJ3Y8HzTR28xRk%3D
-NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME=items
+NEXT_PUBLIC_AZURE_STORAGE_CONNECTION_STRING=https://faultx.blob.core.windows.net/?sv=2022-11-02&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2025-05-24T17:44:07Z&st=2024-05-24T09:44:07Z&spr=https&sig=%2FZg%2Bbk7T9H0biy3fQ2g3xprTGm0VL88G3hxoXIWA3QA%3D
+NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME=model
