--- a/Frontend/rentx/package.json
+++ b/Frontend/rentx/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@microsoft/signalr": "^8.0.0",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/lodash": "^4.17.6",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -22,6 +23,7 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.357.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
