Google login added, chat implemented

--- a/Frontend/rentx/.env
+++ b/Frontend/rentx/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=https://localhost:44375/api
-NEXT_PUBLIC_AZURE_STORAGE_CONNECTION_STRING=https://faultx.blob.core.windows.net/?sv=2022-11-02&ss=bfqt&srt=sco&sp=rwdlacupiytfx&se=2025-05-24T17:44:07Z&st=2024-05-24T09:44:07Z&spr=https&sig=%2FZg%2Bbk7T9H0biy3fQ2g3xprTGm0VL88G3hxoXIWA3QA%3D
-NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME=model
+NEXT_PUBLIC_AZURE_STORAGE_CONNECTION_STRING=BlobEndpoint=https://rentx.blob.core.windows.net/;QueueEndpoint=https://rentx.queue.core.windows.net/;FileEndpoint=https://rentx.file.core.windows.net/;TableEndpoint=https://rentx.table.core.windows.net/;SharedAccessSignature=sv=2022-11-02&ss=bf&srt=sco&sp=rwlactfx&se=2025-09-26T17:39:37Z&st=2024-09-26T09:39:37Z&spr=https&sig=%2BVPMNX5L3IR7ny6Nzch%2F1felR4n0E4MHq5uYtGBKhvw%3D
+NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME=rentximages
