--- a/Frontend/rentx/package.json
+++ b/Frontend/rentx/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@microsoft/signalr": "^8.0.0",
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/lodash": "^4.17.6",
-    "axios": "^1.6.7",
+    "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
@@ -25,13 +25,14 @@
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.357.0",
-    "next": "14.1.0",
+    "next": "14.2.10",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
