Chat api implemented and oauth

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,16 +1,29 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "JwtSettings": {
-        "Key": "this is my custom Secret key for authentication",
-        "Issuer": "youtCompanyIssuer.com"
-    },
-    "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "JwtSettings": {
+    "Key": "this is my custom Secret key for authentication",
+    "Issuer": "youtCompanyIssuer.com",
+    "Audience": "youtCompanyIssuer.com"
+  },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True;MultipleActiveResultSets=True;"
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "https://localhost:44375",
+      "https://localhost:7125",
+      "https://localhost:3000",
+      "https://accounts.google.com"
+    ]
+  },
+  "GoogleOAuth": {
+    "GoogleClientId": "604527366317-i53g83e5kv1hatsvj16sls0vcur3g6a1.apps.googleusercontent.com",
+    "GoogleClientSecret": ""
   }
 }
