docker and deployment configurations

--- a/Backend/appsettings.Production.json
+++ b/Backend/appsettings.Production.json
@@ -13,7 +13,8 @@
   "AllowedHosts": "#{AllowedHost}#",
   "CorsSettings": {
     "AllowedOrigins": [
-      "https://accounts.google.com"
+      "https://accounts.google.com",
+      "https://localhost:3000"
     ]
   },
   "ConnectionStrings": {
@@ -25,5 +26,13 @@
   },
   "KeyVault": {
     "Uri": "#{KeyVaultUri}#"
-  }
+  },
+  "CookieDomain": "#{CookieDomain}#"
+  //"Kestrel": {
+  //  "Endpoints": {
+  //    "Http": {
+  //      "Url": "http://*:5000"
+  //    }
+  //  }
+  //}
 }
