--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -12,7 +12,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=host.docker.internal;Database=rentx;Port=5432;User Id=postgres;Password=postgres;Ssl Mode=Disable;"
+    //"DefaultConnection": "Data Source=DESKTOP-CO3JUC2\\SQLEXPRESS;Initial Catalog=RentX;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "CorsSettings": {
     "AllowedOrigins": [
@@ -25,5 +26,7 @@
   "GoogleOAuth": {
     "GoogleClientId": "604527366317-i53g83e5kv1hatsvj16sls0vcur3g6a1.apps.googleusercontent.com",
     "GoogleClientSecret": ""
-  }
+  },
+  "CookieDomain": "localhost"
 }
+
